welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: value move
move(nbPas: Int,versLAvant: Boolean){
^Program:2: error: not found: value nbPas
move(nbPas: Int,versLAvant: Boolean){
     ^Program:2: error: not found: value versLAvant
move(nbPas: Int,versLAvant: Boolean){
                ^Program:5: error: not found: value versLAvent
  if (versLAvent==true){
      ^Program:6: error: not found: value nbPas
      avance(nbPas)
             ^Program:8: error: not found: value nbPas
      recule(nbPas)
             ^